<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_color">

    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/descp_btn_sair"
        android:background="@color/splash_color"
        android:src="@drawable/ic_baseline_exit"
        android:tint="@color/backColor_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/search_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/accessibility_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dsc_accessibility_btn"
        android:src="@drawable/ic_baseline_accessibility"
        android:background="@color/splash_color"
        android:tint="@color/backColor_main"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_title_abs_main"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title_abs_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_abs"
        android:contentDescription="@string/dsc_titulo_pagina"
        android:textColor="@color/backColor_main"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/dsc_btn_search"
        android:background="@color/splash_color"
        android:src="@drawable/ic_baseline_search"
        android:tint="@color/backColor_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_title_abs_main"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/sv_search_bar"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:iconifiedByDefault="false"
        android:inputType="text"
        android:visibility="gone"
        android:queryHint="@string/hint_search_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>